--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -1,39 +1,52 @@
-Professor Alex's Internet Page
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Interneting Is Easy!</title>
+  </head>
+  <body>
+    <h1>Xilin Qiao's Lab1</h1>
+    <p>First, the basics.</p>
 
-First, the basics.
+    <h2>The Basics</h2>
+    <p>Headings set your default page size</p>
 
-Alex Heading 1
+     <img src='images/mochi.jpg'/>
+     <img src='images/mochi.gif'/>
+     <img src='images/mochi.png'/>
+     <img src='images/mochi.svg'/>
 
-Headings set your default page size
+        <p>Add your four mochi images from your tutorial here.</p>
+    
+    <h3>Lists</h3>
+    <p>Let's make an unordered list.</p>
+        <ul>
+            <li>Add a "ul" element (it stands for unordered list)</li>
+            <li>Add each item in its own "li" element</li>
+            <li>They don't need to be in any particular order</li>
+          </ul>
+        
+    <p>And now, one in order.
+        Add an ordered list element.
+        Add your top five music albums in order to the list.
+        Check it out, numbers by default.</p>
 
-Add your four mochi images from your tutorial here. 
+        <ol>
+            <li>Meta Ego</li>
+            <li>dont smile at me</li>
+            <li>WHEN WE ALL FALL ASLEEP, WHERE DO WE GO?</li>
+            <li>Narrated for You</li>
+            <li>Wasteland, Baby!</li>
+          </ol>
+    <h3>Inline Elements</h3>
+    <p>Sometimes you want to draw attention to something in a line of text.
 
-Lists
+        Sometimes you want to <strong>strongly<strong> emphasize something in the text.</p>
+        <p><em><strong>Sometimes you want to do both.</strong></em></p>
+    <h4>Empty Elements</h4>
+    <p>Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
 
-Let's make an unordered list.
-
-Add an unordered list element
-nest each item inside the unordered list in a list tag
-List elements can be in any order
-
-And now, one in order.
-
-Add an ordered list element.
-Add your top five music albums in order to the list.
-Check it out, numbers by default.
-
-Inline elements
-
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-
-Add a hard line under here.
-
-This page probably doesn't look great - we'll learn how to hook it to CSS next week.
+        Add a hard line under here.</p>
+    <hr/>
+    <p>This page probably doesn't look great - we'll learn how to hook it to CSS next week.</p>
+  </body>
+</html>
