--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -40,7 +40,7 @@
     <h3>Inline Elements</h3>
     <p>Sometimes you want to draw attention to something in a line of text.
 
-        Sometimes you want to <strong>strongly<strong> emphasize something in the text.</p>
+        Sometimes you want to <strong>strongly</strong> emphasize something in the text.</p>
         <p><em><strong>Sometimes you want to do both.</strong></em></p>
     <h4>Empty Elements</h4>
     <p>Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
