--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -10,10 +10,10 @@
     <h2>The Basics</h2>
     <p>Headings set your default page size</p>
 
-     <img src='images/mochi.jpg'/>
-     <img src='images/mochi.gif'/>
-     <img src='images/mochi.png'/>
-     <img src='images/mochi.svg'/>
+     <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.jpg'/>
+     <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.gif'/>
+     <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.png'/>
+     <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.svg'/>
 
         <p>Add your four mochi images from your tutorial here.</p>
     
