--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -9,7 +9,9 @@
 
     <h2>The Basics</h2>
     <p>Headings set your default page size</p>
-
+    <a
+    href='links.html'>links</a> and <a href='misc/extras.html'>useful
+    extras</a>
      <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.jpg'/>
      <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.gif'/>
      <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.png'/>
