--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -12,10 +12,10 @@
     <a
     href='links.html'>links</a> and <a href='misc/extras.html'>useful
     extras</a>
-     <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.jpg'/>
-     <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.gif'/>
-     <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.png'/>
-     <img src='C:\Users\steve\OneDrive\Documents\links-and-images/images/mochi.svg'/>
+     <img src='mochi.jpg'/>
+     <img src='mochi.gif'/>
+     <img src='mochi.png'/>
+     <img src='mochi.svg'/>
 
         <p>Add your four mochi images from your tutorial here.</p>
     
