--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -9,9 +9,7 @@
 
     <h2>The Basics</h2>
     <p>Headings set your default page size</p>
-    <a
-    href='links.html'>links</a> and <a href='misc/extras.html'>useful
-    extras</a>
+    <a href='images.html'>images</a>
      <img src='mochi.jpg'/>
      <img src='mochi.gif'/>
      <img src='mochi.png'/>
