--- a/public/labs/lab_1/index.html
+++ b/public/labs/lab_1/index.html
@@ -9,10 +9,10 @@
 
     <h2>The Basics</h2>
     <p>Headings set your default page size</p>
-     <img src='mochi.jpg'/>
-     <img src='mochi.gif'/>
-     <img src='mochi.png'/>
-     <img src='mochi.svg'/>
+     <img src='images/mochi.jpg'/>
+     <img src='images/mochi.gif'/>
+     <img src='images/mochi.png'/>
+     <img src='images/mochi.svg'/>
 
         <p>Add your four mochi images from your tutorial here.</p>
     
