--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Birdwatching</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
-
+    <title>XILIN QIAO'S LAB 2</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
+    <link rel='stylesheet' href='styles.css'/>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -12,7 +12,7 @@
 
   <body>
 
-      <h1>Birdwatching</h1>
+      <h1>XILIN QIAO'S LAB 2</h1>
       <img src="dove.png" alt="a simple dove logo">
 
 
@@ -27,9 +27,9 @@
 
       <h2>Welcome</h2>
 
-      <p>Welcome to our fake birdwatching site. If this were a real site, it would be the ideal place to come to learn more about birdwatching, whether you are a beginner looking to learn how to get into birding, or an expert wanting to share ideas, tips, and photos with other like-minded people.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ornare sollicitudin dolor sed porta. Morbi molestie, mi vitae ullamcorper semper, arcu odio varius ipsum, a tristique sem lorem eu nibh. Ut bibendum, tortor sed convallis malesuada, ex risus malesuada elit, sed tincidunt libero velit eget arcu. Nullam est dolor, euismod nec augue condimentum, tincidunt vehicula purus. Cras urna nibh, tristique id tellus quis, sagittis faucibus magna. Nunc egestas, ex mollis efficitur facilisis, justo dolor tristique mi, id placerat lectus sapien at orci. Duis hendrerit risus at augue pellentesque, nec varius quam semper. Vivamus sagittis nibh vitae est gravida, nec cursus est auctor. Vestibulum non augue justo. Vivamus ac dui id nisi condimentum venenatis in sed leo. Nullam malesuada blandit erat, quis ultrices justo.
 
-      <p>So don't waste time! Get what you need, then turn off that computer and get out into the great outdoors!</p>
+        Integer vehicula id ipsum et euismod. Nunc non massa nec augue pellentesque condimentum. Sed eleifend bibendum neque, ac aliquet dui consequat eu. In porttitor mauris sit amet porta scelerisque. Aliquam vulputate ipsum dolor, nec sollicitudin nibh porta quis. Phasellus ornare egestas nulla in efficitur. In libero dolor, rutrum nec odio vehicula, sodales porttitor orci. Quisque molestie ut sapien sed pellentesque. Donec condimentum nunc velit, non consectetur nulla efficitur et. Sed ut tellus orci. Cras in sem id turpis mollis viverra. Suspendisse fringilla metus in aliquet egestas. Nam mollis felis tellus, at consequat quam dapibus non.</p>
 
       <h2>Favourite photos</h2>
 
