--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>XILIN QIAO'S LAB 2</title>
-
-    <link rel='stylesheet' href='styles.css'/>
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300|Cinzel+Decorative:700" rel="stylesheet">
+    <link rel='stylesheet' href='style.css'/>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
