--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -13,7 +13,7 @@
   <body>
 
       <h1>XILIN QIAO'S LAB 2</h1>
-      <img src="dove.png" alt="a simple dove logo">
+      <img src="dove.png" alt="a simple dove logo" width = 20 height = 20>
 
 
       <ul>
