--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -13,7 +13,7 @@
   <body>
 
       <h1>XILIN QIAO'S LAB 2</h1>
-      <img src="dove.png" alt="a simple dove logo" width = 20 height = 20>
+      <img src="dove.png" alt="a simple dove logo">
 
 
       <ul>
@@ -31,7 +31,7 @@
 
         Integer vehicula id ipsum et euismod. Nunc non massa nec augue pellentesque condimentum. Sed eleifend bibendum neque, ac aliquet dui consequat eu. In porttitor mauris sit amet porta scelerisque. Aliquam vulputate ipsum dolor, nec sollicitudin nibh porta quis. Phasellus ornare egestas nulla in efficitur. In libero dolor, rutrum nec odio vehicula, sodales porttitor orci. Quisque molestie ut sapien sed pellentesque. Donec condimentum nunc velit, non consectetur nulla efficitur et. Sed ut tellus orci. Cras in sem id turpis mollis viverra. Suspendisse fringilla metus in aliquet egestas. Nam mollis felis tellus, at consequat quam dapibus non.</p>
 
-      <h2>Favourite photos</h2>
+      <h3>Favourite photos</h3>
 
       <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
       <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
