--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-
+    <div class = "header">
       <h1>XILIN QIAO'S LAB 2</h1>
       <img src="dove.png" alt="a simple dove logo">
 
@@ -23,7 +23,7 @@
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
-
+    </div>
 
       <h2>Welcome</h2>
 
