--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -32,10 +32,12 @@
         Integer vehicula id ipsum et euismod. Nunc non massa nec augue pellentesque condimentum. Sed eleifend bibendum neque, ac aliquet dui consequat eu. In porttitor mauris sit amet porta scelerisque. Aliquam vulputate ipsum dolor, nec sollicitudin nibh porta quis. Phasellus ornare egestas nulla in efficitur. In libero dolor, rutrum nec odio vehicula, sodales porttitor orci. Quisque molestie ut sapien sed pellentesque. Donec condimentum nunc velit, non consectetur nulla efficitur et. Sed ut tellus orci. Cras in sem id turpis mollis viverra. Suspendisse fringilla metus in aliquet egestas. Nam mollis felis tellus, at consequat quam dapibus non.</p>
 
       <h3>Favourite photos</h3>
+      <aside id = "image">
       <a href="favorite-1.jpg"><img src="favorite-1_th.jpg" alt="Small black bird, black claws, long black slender beak, links to larger version of the image"></a>
       <a href="favorite-2.jpg"><img src="favorite-2_th.jpg" alt="Top half of a pretty bird with bright blue plumage on neck, light colored beak, blue headdress, links to larger version of the image"></a>
       <a href="favorite-3.jpg"><img src="favorite-3_th.jpg" alt="Top half of a large bird with white plumage, very long curved narrow light colored break, links to larger version of the image"></a>
       <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
+      </aside>
       </div>
       <div class = "footer">
       <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
