--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -15,7 +15,7 @@
       <h1>XILIN QIAO'S LAB 2</h1>
       <img src="dove.png" alt="a simple dove logo">
 
-
+      <nav>
       <ul>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
@@ -23,7 +23,9 @@
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
+    </nav>
     </div>
+    <div class = main>
      <div class = "aside">
       <h2>Welcome</h2>
       <div class = "article">
@@ -41,6 +43,7 @@
       </aside>
       </div>
       </div>
+    </div>
       <div class = "footer">
       <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
 
