--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <div class = "main">
     <div class = "header">
       <h1>XILIN QIAO'S LAB 2</h1>
       <img src="dove.png" alt="a simple dove logo">
@@ -25,7 +26,7 @@
       </ul>
     </nav>
     </div>
-    <div class = main>
+    <div class = "aside">
     
       <h2>Welcome</h2>
       <div class = "article">
@@ -47,6 +48,7 @@
       <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
 
       <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
+      </div>
       </div>
   </body>
 </html>
