--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -26,6 +26,7 @@
       </ul>
     </nav>
     </div>
+    <div class = "main">
     <div class = "aside">
     
       <h2>Welcome</h2>
@@ -43,6 +44,7 @@
       <a href="favorite-4.jpg"><img src="favorite-4_th.jpg" alt="Large bird, mostly white plumage with black plumage on back and rear, long straight white beak, links to larger version of the image"></a>
      
       </div>
+    </div>
     </div>
       <div class = "footer">
       <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
