--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -47,9 +47,8 @@
     </div>
     </div>
       <div class = "footer">
-      <p>This fake website example is CC0 — any part of this code may be reused in any way you wish. Original example written by Chris Mills, 2016.</p>
+      <p>This website example has been written by Xilin Qiao, 2021</p>
 
-      <p><a href="http://game-icons.net/lorc/originals/dove.html">Dove icon</a> by Lorc.</p>
       </div>
     
   </body>
