--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -25,7 +25,7 @@
       </ul>
       </nav>
     </div>
-    
+    <div class = "main">
     <div class = "aside">
        <div class = "article">
         <aside id = "a">
@@ -48,6 +48,7 @@
           <aside>
         </div>
        </div>
+    </div>
     </div>
     <div class = "footer">
       <p>This website example has been written by Xilin Qiao, 2021</p>
