--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    
+    <input>
      <div class = "header">
        <h1>XILIN QIAO'S LAB 2</h1>
        <img src="dove.png" alt="a simple dove logo">
@@ -55,6 +55,6 @@
       <p>This website example has been written by Xilin Qiao, 2021</p>
 
     </div>
-    
+  </input>
   </body>
 </html>
