--- a/public/labs/lab_2/index.html
+++ b/public/labs/lab_2/index.html
@@ -48,10 +48,11 @@
         </div>
        
     </div>
+    <div class = "section">
     <div class = "footer">
       <p>This website example has been written by Xilin Qiao, 2021</p>
 
     </div>
-  
+  </div>
   </body>
 </html>
