--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -2,3 +2,23 @@
 <!-- Include your stylesheet in the head -->
 <!-- Include your script.js right before the </body> tag -->
 <!-- Make a carousel of four mochi images that cycle, based on the readings from javascript.info -->
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>XILIN QIAO'S LAB 3</title>
+        <link rel='stylesheet' href='style.css'/>
+    </head>
+
+<body>
+<div class = main>
+ <img src="onigiri_1.png">
+ <img src="onigiri_2.png">
+ <img src="onigiri_3.png">
+ <img src="onigiri_4.png">
+ <img src="roll_1.png">
+ <img src="roll_2.png">
+ <img src="roll_3.png">
+</div>
+</body>
+<script src = 'script.js'></script>
+</html>
