--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -11,13 +11,13 @@
 
 <body>
 <div class = main>
- <img src="onigiri_1.png">
- <img src="onigiri_2.png">
- <img src="onigiri_3.png">
- <img src="onigiri_4.png">
- <img src="roll_1.png">
- <img src="roll_2.png">
- <img src="roll_3.png">
+ <img src="images/onigiri_1.png">
+ <img src="images/onigiri_2.png">
+ <img src="images/onigiri_3.png">
+ <img src="images/onigiri_4.png">
+ <img src="images/roll_1.png">
+ <img src="images/roll_2.png">
+ <img src="images/roll_3.png">
 </div>
 </body>
 <script src = 'script.js'></script>
