--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <title>XILIN QIAO'S LAB 3</title>
-        <link rel='stylesheet' href='style.css'/>
+        <link rel='stylesheet' href='styles.css'/>
     </head>
 
 <body>
