--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -11,13 +11,31 @@
 
 <body>
 <div class = main>
+    <div class = "layout1">
  <img src="images/onigiri_1.png">
  <img src="images/onigiri_2.png">
  <img src="images/onigiri_3.png">
+</div>
+<div class = "layout2">
+<img src="images/onigiri_2.png">
+ <img src="images/onigiri_3.png">
+ <img src="images/onigiri_4.png">
+ </div>
+ <div class = "layout3">
+ <img src="images/onigiri_3.png">
  <img src="images/onigiri_4.png">
  <img src="images/roll_1.png">
+</div>
+<div class = "layout4">
+<img src="images/onigiri_4.png">
+ <img src="images/roll_1.png">
  <img src="images/roll_2.png">
+ </div>
+ <div class = "layout5">
+    <img src="images/roll_1.png">
+    <img src="images/roll_2.png">
  <img src="images/roll_3.png">
+</div>
 </div>
 </body>
 <script src = 'script.js'></script>
