--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -12,6 +12,7 @@
 <body>
 <div class = main>
     <div class = "layout1" id= 1>
+        <h1>Click!</h1>
     </div>
     <div class = "layout2" id = 2>
      </div>
