--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -10,20 +10,15 @@
     </head>
 
 <body>
-<div class = main>
-    <div class = "layout1" id= 1>
-        <h1>Click!</h1>
-    </div>
-    <div class = "layout2" id = 2>
-     </div>
-     <div class = "layout3" id = 3>
-    </div>
-    <div class = "layout4" id = 4>
-     </div>
-     <div class = "layout5" id = 5>
-    </div>
-    <button class = "scrollRight">Right</button>
-<button class = "scrollLeft">Left</button>
+    <div>
+        <button onclick="show_image('left')">&lt;</button>
+        <button onclick="show_image('right')">&gt;</button>
+      </div>
+      
+      <div>
+        <img id="main-image" />
+      </div>
+
 </div>
 <script src = 'script.js'></script>
 </body>
