--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -10,6 +10,7 @@
     </head>
 
 <body>
+    <div class = "main">
     <div>
         <button onclick="show_image('left')">&lt;</button>
         <button onclick="show_image('right')">&gt;</button>
