--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -12,14 +12,12 @@
 <body>
     <div class = "main">
     <div>
-        <button onclick="show_image('left')">&lt;</button>
-        <button onclick="show_image('right')">&gt;</button>
+        <button onclick="showImage('left')">&lt;</button>
+        <button onclick="showImage('right')">&gt;</button>
       </div>
-      
       <div>
         <img id="main-image" />
       </div>
-
 </div>
 <script src = 'script.js'></script>
 </body>
