--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -11,12 +11,14 @@
 
 <body>
     <div class = "main">
+        <div class = "carousel">
     <div>
         <button onclick="showImage('left')">&lt;</button>
         <button onclick="showImage('right')">&gt;</button>
       </div>
       <div>
         <img id="main-image" />
+      </div>
       </div>
 </div>
 <script src = 'script.js'></script>
