--- a/public/labs/lab_3/index.html
+++ b/public/labs/lab_3/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class = "main">
-        <div class = "carousel">
+        <div class = "center">
     <div>
         <button onclick="showImage('left')">&lt;</button>
         <button onclick="showImage('right')">&gt;</button>
