--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -4,6 +4,9 @@
     <link rel='stylesheet' href='styles.css'/>
 </head>
 <div class="container">
+  <head>
+    Xilin Qiao's Lab 4
+    </head>>
     <form>
       <ul class="flex-outer">
         <li>
