--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -6,7 +6,7 @@
 <div class="container">
   <head>
     Xilin Qiao's Lab 4
-    </head>>
+    </head>
     <form>
       <ul class="flex-outer">
         <li>
