--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -7,7 +7,7 @@
   <head>
     Xilin Qiao's Lab 4
     </head>
-    <form>
+    <form method="POST" action = "/api">
       <ul class="flex-outer">
         <li>
           <label for="first-name">First Name</label>
