--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -5,7 +5,7 @@
 </head>
 <div class="container">
   <head>
-    XILIN QIAO's LAB 4
+    Xilin Qiao's Lab 4
     </head>
     <form method="POST" action = "/api">
       <ul class="flex-outer">
