--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -1,13 +1,11 @@
 <head>
     <meta charset="utf-8">
-    <title>XILIN QIAO'S LAB 3</title>
+    <title>XILIN QIAO'S LAB 4</title>
     <link rel='stylesheet' href='styles.css'/>
 </head>
 <div class="container">
+  <h1>Xilin Qiao's Lab 4</h1>
     <form method="POST" action = "/api">
-      <head>
-        Xilin Qiao's Lab 4
-        </head>
       <ul class="flex-outer">
         <li>
           <label for="first-name">First Name</label>
