--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <meta charset="utf-8">
     <title>XILIN QIAO'S LAB 4</title>
@@ -62,3 +63,4 @@
       </ul>
     </form>
   </div>
+</html>
