--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>XILIN QIAO'S LAB 4</title>
@@ -6,15 +6,15 @@
 </head>
 <div class="container">
   <h1>Xilin Qiao's Lab 4</h1>
-    <form method="POST" action = "/api">
+    <form method="post" action = "/api">
       <ul class="flex-outer">
         <li>
-          <label for="first-name">First Name</label>
-          <input type="text" id="first-name" placeholder="Enter your first name here">
+          <label for="fname">First Name</label>
+          <input type="text" id="fname" placeholder="Enter your first name here">
         </li>
         <li>
-          <label for="last-name">Last Name</label>
-          <input type="text" id="last-name" placeholder="Enter your last name here">
+          <label for="lname">Last Name</label>
+          <input type="text" id="lname" placeholder="Enter your last name here">
         </li>
         <li>
           <label for="email">Email</label>
@@ -26,7 +26,7 @@
         </li>
         <li>
           <label for="message">Message</label>
-          <textarea rows="6" id="message" placeholder="Enter your message here"></textarea>
+          <textarea rows="5" cols = "33" id="message" name = "message" placeholder="Enter your message here"></textarea>
         </li>
         <li>
           <p>Age</p>
