--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -10,19 +10,19 @@
       <ul class="flex-outer">
         <li>
           <label for="fname">First Name</label>
-          <input type="text" id="fname" placeholder="Enter your first name here">
+          <input type="text" id="fname">
         </li>
         <li>
           <label for="lname">Last Name</label>
-          <input type="text" id="lname" placeholder="Enter your last name here">
+          <input type="text" id="lname">
         </li>
         <li>
           <label for="email">Email</label>
-          <input type="email" id="email" placeholder="Enter your email here">
+          <input type="email" id="email">
         </li>
         <li>
           <label for="phone">Phone</label>
-          <input type="tel" id="phone" placeholder="Enter your phone here">
+          <input type="tel" id="phone">
         </li>
         <li>
           <label for="message">Message</label>
