--- a/public/flappy/index.html
+++ b/public/flappy/index.html
@@ -9,6 +9,8 @@
 <body>
   <div class = "borderLeft"></div>
   <div class = "game-container">
+      <div class = "obstacle"></div>
+      <div class = "topObstacle"></div>
       <div class = "borderTop"></div>
       <div class = "sky">
           <div class = "bird">
