--- a/public/labs/lab_4/index.html
+++ b/public/labs/lab_4/index.html
@@ -10,19 +10,19 @@
       <ul class="flex-outer">
         <li>
           <label for="fname">First Name</label>
-          <input type="text" id="fname">
+          <input type="text" id="fname" name="fname">
         </li>
         <li>
           <label for="lname">Last Name</label>
-          <input type="text" id="lname">
+          <input type="text" id="lname" name="lname">
         </li>
         <li>
           <label for="email">Email</label>
-          <input type="email" id="email">
+          <input type="email" id="email" name="email">
         </li>
         <li>
           <label for="phone">Phone</label>
-          <input type="tel" id="phone">
+          <input type="tel" id="phone" name="phone">
         </li>
         <li>
           <label for="message">Message</label>
@@ -32,35 +32,35 @@
           <p>Age</p>
           <ul class="flex-inner">
             <li>
-              <input type="checkbox" id="twenty-to-twentynine">
+              <input type="checkbox" id="twenty-to-twentynine" name="twenty-to-twentynine">
               <label for="twenty-to-twentynine">20-29</label>
             </li>
             <li>
-              <input type="checkbox" id="thirty-to-thirtynine">
+              <input type="checkbox" id="thirty-to-thirtynine" name="thirty-to-thirtynine">
               <label for="thirty-to-thirtynine">30-39</label>
             </li>
             <li>
-              <input type="checkbox" id="fourty-to-fourtynine">
+              <input type="checkbox" id="fourty-to-fourtynine" name="fourty-to-fourtynine">
               <label for="fourty-to-fourtynine">40-49</label>
             </li>
             <li>
-              <input type="checkbox" id="fifty-to-fiftynine">
+              <input type="checkbox" id="fifty-to-fiftynine" name="fifty-to-fiftynine">
               <label for="fifty-to-fiftynine">50-59</label>
             </li>
             <li>
-              <input type="checkbox" id="sixty-to-sixtynine">
+              <input type="checkbox" id="sixty-to-sixtynine" name="sixty-to-sixtynine">
               <label for="sixty-to-sixtynine">60-69</label>
             </li>
             <li>
-              <input type="checkbox" id="other">
+              <input type="checkbox" id="other" name="other">
               <label for="other">Other</label>
             </li>
           </ul>
         </li>
         <li>
+          <button type = "submit" id = "submit" name = "submit">Submit</button>
         </li>
       </ul>
-      <button type="submit">Submit</button>
     </form>
   </div>
 </html>
