--- a/public/labs/lab_5/index.html
+++ b/public/labs/lab_5/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,53 +13,23 @@
     integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
     crossorigin=""></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-    <h1>Xilin Qiao's Lab 5</h1>
+    <link rel='stylesheet' type="text/css" href='style.css'/>
+    <h1 class ="title">Xilin Qiao's Lab5</h1>
   </head>
   <body>
-    <form class="search-form">
-        <input type="text" class="search" placeholder="Any letter or number">
-        <ul class="suggestions">
-          <li>Filter for a city, establishment id, name,</li>
-          <li>category, zipcode, address line</li>
-        </ul>
-      </form>
-    <script src = 'script.js'>
-      const endpoint = 'https://data.princegeorgescountymd.gov/resource/umjn-t2iz.json';
-  const cities = [];
-
-  fetch(endpoint)
-  .then(blob => blob.json())
-  .then(data => cities.push(...data));
-
-  function findMatches(wordToMatch, cities) {
-      return cities.filter(place => {
-          const regex = new RegExp(wordToMatch, 'gi');
-          return place.establishment_id.match(regex) || place.name.match(regex) 
-          || place.category.match(regex) || place.city.match(regex)
-          || place.address_line_1.match(regex) || place.zip.match(regex)
-      });
-  }
-
-  function displayMatches() {
-      const matchArray = findMatches(this.value, cities);
-      const html = matchArray.map(place => {
-          const regex = new RegExp(this.value, 'gi');
-          const idName = place.establishment_id.replace(regex, `<span class="hl">${this.value}</span>`);
-          const name = place.name.replace(regex, `<span class="hl">${this.value}</span>`);
-          const categoryName = place.category.replace(regex, `<span class="hl">${this.value}</span>`);
-          const addressName = place.address_line_1.replace(regex, `<span class="hl">${this.value}</span>`);
-          const cityName = place.city.replace(regex, `<span class="hl">${this.value}</span>`);
-          const zipName = place.zip.replace(regex, `<span class="hl">${this.value}</span>`);
-              return `
-              <li>
-              <span class="name">${name}, ${idName}, ${categoryName}, ${addressName}, ${cityName}, ${zipName},</span>
-              <span class="population">${place.zip}</span>
-              </li>
-              `;
-      }).join('');
-      suggestions.innerHTML = html;
-  }
-    </script>
-</form>
+    <div class="columns">
+      <div class="column">
+          <form action="" id="search-form">
+            <label for="search">Search for a zip code</label>
+            <input type="text" name="search" id="search" placeholder="Zip code">
+            <button type="submit">Submit</button>
+          </form>
+          <ul class="target-list"></ul>
+      </div>
+        <div class="column">
+          <div id="mapid"></div>
+       </div>
+    </div>
+    <script src = 'script.js'></script>
 </body>
 </html>
